--- a/f407_discovery_base.ioc
+++ b/f407_discovery_base.ioc
@@ -54,18 +54,19 @@ Mcu.Pin29=PD4
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin30=PD5
 Mcu.Pin31=PB3
-Mcu.Pin32=PB6
-Mcu.Pin33=PB9
-Mcu.Pin34=PE1
-Mcu.Pin35=VP_SYS_VS_Systick
-Mcu.Pin36=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=PB9
+Mcu.Pin35=PE1
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_USB_HOST_VS_USB_HOST_CDC_FS
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -178,6 +179,8 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Pu,GPIO_Mode
 PB6.GPIO_Label=Audio_SCL [CS43L22_SCL]
 PB6.GPIO_Mode=GPIO_MODE_AF_OD
@@ -368,10 +371,13 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=5.25 MBits/s
 SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,Mode,VirtualType,Direction,CLKPolarity,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
