--- a/f407_discovery_base.ioc
+++ b/f407_discovery_base.ioc
@@ -2,30 +2,40 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=SPI3_TX
+Dma.RequestsNb=1
+Dma.SPI3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI3_TX.0.Instance=DMA1_Stream5
+Dma.SPI3_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI3_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.0.Mode=DMA_NORMAL
+Dma.SPI3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2S3.AudioFreq-Half_Duplex_Master=I2S_AUDIOFREQ_96K
-I2S3.ErrorAudioFreq=-2.34 %
-I2S3.ErrorAudioFreq-Half_Duplex_Master=0.8 %
-I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S3.IPParameters=AudioFreq-Half_Duplex_Master,ErrorAudioFreq-Half_Duplex_Master,RealAudioFreq-Half_Duplex_Master,RealAudioFreq,ErrorAudioFreq,Instance,VirtualMode,FullDuplexMode
+I2S3.ErrorAudioFreq=-0.27 %
+I2S3.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
+I2S3.IPParameters=RealAudioFreq,ErrorAudioFreq,Instance,VirtualMode,FullDuplexMode
 I2S3.Instance=SPI$Index
-I2S3.RealAudioFreq=93.75 KHz
-I2S3.RealAudioFreq-Half_Duplex_Master=96.774 KHz
+I2S3.RealAudioFreq=7.978 KHz
 I2S3.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
-Mcu.IP0=I2C1
-Mcu.IP1=I2S3
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IP7=USB_HOST
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP0=DMA
+Mcu.IP1=I2C1
+Mcu.IP2=I2S3
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USART2
+Mcu.IP8=USB_HOST
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -49,30 +59,32 @@ Mcu.Pin24=PA12
 Mcu.Pin25=PA13
 Mcu.Pin26=PA14
 Mcu.Pin27=PC10
-Mcu.Pin28=PC12
-Mcu.Pin29=PD4
+Mcu.Pin28=PC11
+Mcu.Pin29=PC12
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PD5
-Mcu.Pin31=PB3
-Mcu.Pin32=PB5
-Mcu.Pin33=PB6
-Mcu.Pin34=PB9
-Mcu.Pin35=PE1
-Mcu.Pin36=VP_SYS_VS_Systick
-Mcu.Pin37=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin30=PD4
+Mcu.Pin31=PD5
+Mcu.Pin32=PB3
+Mcu.Pin33=PB5
+Mcu.Pin34=PB6
+Mcu.Pin35=PB9
+Mcu.Pin36=PE1
+Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin38=VP_USB_HOST_VS_USB_HOST_CDC_FS
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -129,7 +141,7 @@ PA4.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_PuPd=GPIO_NOPULL
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
-PA4.Mode=Half_Duplex_Master
+PA4.Mode=Full_Duplex_Master
 PA4.Signal=I2S3_WS
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA5.GPIO_Label=SPI1_SCK [LIS302DL_SCL/SPC]
@@ -212,15 +224,17 @@ PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PC10.GPIO_PuPd=GPIO_NOPULL
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Locked=true
-PC10.Mode=Half_Duplex_Master
+PC10.Mode=Full_Duplex_Master
 PC10.Signal=I2S3_CK
+PC11.Mode=Full_Duplex_Master
+PC11.Signal=I2S3_ext_SD
 PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC12.GPIO_Label=I2S3_SD [CS43L22_SDIN]
 PC12.GPIO_Mode=GPIO_MODE_AF_PP
 PC12.GPIO_PuPd=GPIO_NOPULL
 PC12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC12.Locked=true
-PC12.Mode=Half_Duplex_Master
+PC12.Mode=Full_Duplex_Master
 PC12.Signal=I2S3_SD
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=PC14-OSC32_IN
@@ -336,7 +350,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2S3_Init-I2S3-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USB_HOST_Init-USB_HOST-false-HAL-false,7-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2S3_Init-I2S3-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USB_HOST_Init-USB_HOST-false-HAL-false,8-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
